--- a/.github/workflows/run-csharp-codeql-sample.yml
+++ b/.github/workflows/run-csharp-codeql-sample.yml
@@ -1,7 +1,7 @@
-name: Build CodeQL CLI (reusable)
+name: Run CSharp CodeQL Sample
 
 on:
-  workflow_call: {}
+  workflow_dispatch:
 
 jobs:
   build-codeql-cli:
